--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Sunil Mitra Kumar
       </h1>
     </header>
 
-    <p><img src="https://cdn.glitch.com/6f14618b-453a-470a-8e0f-c1842a088b63%2Fsunil_profile_picture.png?v=1565259194535" alt="Smiley face" style="float:right;width:142px;height:142px;">
+    <p><img src="images/Sunil Kumar.jpg" alt="hi" style="float:right;width:142px;height:142px;">
 <br>
       <b style="color: blue"> <a href="https://www.kcl.ac.uk/people/sunil-mitra-kumar"> Lecturer in Economics </a></b><br>
      <b style="color: blue"> <a href="https://www.kcl.ac.uk/kii"> King's India Institute </a></b> and
