--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Sunil Mitra Kumar
       </h1>
     </header>
 
-    <p><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" alt="hi" style="float:center;width:213px;height:142px;">
+    <p><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" alt="hi" style="float:center;">
 <br>
       <b style="color: blue"> <a href="https://www.kcl.ac.uk/people/sunil-mitra-kumar"> Lecturer in Economics </a></b><br>
      <b style="color: blue"> <a href="https://www.kcl.ac.uk/kii"> King's India Institute </a></b> and
