--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Sunil Mitra Kumar
 
     
    <div>
-    <p style="float: left;"><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" border="1px"></p>
+    <p style="float: left;"><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" height="280px" width="200px" border="1px"></p>
          <p>
       <b style="color: blue"> <a href="https://www.kcl.ac.uk/people/sunil-mitra-kumar"> Lecturer in Economics </a></b><br>
      <b style="color: blue"> <a href="https://www.kcl.ac.uk/kii"> King's India Institute </a></b> and
