--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ Sunil Mitra Kumar
 
     
    <div>
-    <p style="float: left;"><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" height="200px" width="280px" border="20px"></p>
+    <p style="clear: left;"><img src="sunilmitrakumar.github.io/images/Sunil Kumar.jpg" height="200px" width="280px" border="1px"></p>
          <p>
        <b <br>    
-      <b style="color: blue"> <a href="https://www.kcl.ac.uk/people/sunil-mitra-kumar"> Lecturer in Economics </a></b><br>
+      <b style="color: blue" "margin-top:1cm;"> <a href="https://www.kcl.ac.uk/people/sunil-mitra-kumar"> Lecturer in Economics </a></b><br>
      <b style="color: blue"> <a href="https://www.kcl.ac.uk/kii"> King's India Institute </a></b> and
       <br>
       <b style="color: blue"> <a href="https://www.kcl.ac.uk/did"> Dept of International Development </a></b><br>
