--- a/index.html
+++ b/index.html
@@ -119,9 +119,20 @@ Economic analysis for emerging economies: microeconomics
           <br/><br/>
   <h2> Software </h2> 
 
+  
+    <b style="color: blue"> <a href="https://ideas.repec.org/c/boc/bocode/s458040.html"> 
   rsens: Rosenbaum sensitivity analysis for 1-n propensity score matching
+      </a></b>
           <br/><br/>
+
+      <b style="color: blue"> <a href="https://ideas.repec.org/c/boc/bocode/s458041.html"> 
 qqcompare: Evaluate post-matching balance using quantile-quantile plots
+      </a></b>
+          <br/><br/>
+
+
+            <br/><br/>
+            <br/><br/>
   
       <section class="dreams">
         <ul id="dreams"></ul>
