--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ Sunil Mitra Kumar
 
   
     <br/><br/>
-  <b style="color: blue"> <a > The Importance of Being Earliest: Birth Order and Educational Outcomes along the Socioeconomic Ladder in Mexico </a> </b> 
-   Forthcoming in the Journal of Population Economics.
+  <b style="color: blue"> <a href="https://link.springer.com/article/10.1007/s00148-019-00764-3" > The Importance of Being Earliest: Birth Order and Educational Outcomes along the Socioeconomic Ladder in Mexico </a> </b> 
+   Journal of Population Economics.
   With 
   <b style="color: blue"> <a href="https://people.uea.ac.uk/lucio_esposito" 
                                   >Lucio Esposito</a></b> 
