--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
-    
+    <meta name="google-site-verification" content="qSJvlK6isgQlBK3Km1SicejgZvd-ga0st93Mt8OuFy8" />
   </head>
   <body>
     <header>
