--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Sunil Mitra Kumar
    <div>
          <p style="clear: left;">
       <b style="color: blue" "margin-top:1cm;"> <a href="https://scholar.google.co.uk/citations?user=cwAFPc4AAAAJ&hl=en"> Google Scholar </a></b><br>
-     <b style="color: blue"> <a href="https://www.researchgate.net/profile/Sunil_Kumar602"> ResearchGate </a></b> and
+     <b style="color: blue"> <a href="https://www.researchgate.net/profile/Sunil_Kumar602"> ResearchGate </a></b>
       <br>
     </p>
 </div> 
@@ -123,7 +123,7 @@ Sunil Mitra Kumar
   
   
   
-  <b style="color: blue"> <a href="https://rl.talis.com/3/kcl/lists/49B71A0B-8448-06BE-9C8A-14BF9878F630.html"> Advanced quantitative methods for causal inference </a></b>
+  <b style="color: blue"> <a href="https://rl.talis.com/3/kcl/lists/0C62B7CF-28EF-B2A6-8012-B7232F60A541.html"> Advanced quantitative methods for causal inference </a></b>
           <br/><br/>
 India's economy: Structures, policies and challenges
           <br/><br/>
