--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ Sunil Mitra Kumar
     <br/><br/>
   
   <b style="color: blue"> <a href="https://www.researchgate.net/publication/333173014_Causal_inference_in_discrimination_using_observational_data_On_taste-based_versus_statistical_discrimination">
-    Causal inference in discrimination using observational data: On taste-based versus statistical discrimination</a></b>. 
-  With <b style="color: blue"> <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a> </b>
+    Causal inference for discrimination</a></b>. 
+  With <b style="color: blue"> <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a> </b> <b style="color: grey">(new version coming soon)</b>.
   
   
   <br/><br/>
