--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ Sunil Mitra Kumar
 
     <br/><br/>
   
-  <b style="color: blue"> <a href="https://www.researchgate.net/publication/333173014_Causal_inference_in_discrimination_using_observational_data_On_taste-based_versus_statistical_discrimination">
-    Causal inference for discrimination</a></b>. 
+  <b style="color: blue"> Causal inference for discrimination</b>. 
   With <b style="color: blue"> <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a> </b> <b style="color: grey">(new version coming soon)</b>.
   
   
