--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ Sunil Mitra Kumar
   <h2>  Writing </h2>
 
 
+  <b style="color: blue"> Economic Structures and Dynamics: A Morphogenetic View</b>. 
+  With <b style="color: blue"> <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a> </b> Forthcoming at Structural Change and Economic Dynamics.
   
   <b style="color: blue"> <a href="https://link.springer.com/article/10.1007/s00148-019-00764-3" > The Importance of Being Earliest: Birth Order and Educational Outcomes along the Socioeconomic Ladder in Mexico </a> </b> 
     Journal of Population Economics (2020).
