--- a/index.html
+++ b/index.html
@@ -228,15 +228,13 @@ Ideas for India blog (June 2013)
 
 
 
-
-
 <hr>      
 <h2 id="workinprogress">Work in progress</h2>
 
-<h3 style="margin:20px 0 5px;">Causal inference for discrimination</h3>
+<h3 style="margin:20px 0 5px;"><a href="https://kclpure.kcl.ac.uk/portal/en/publications/causal-inference-for-discrimination-an-analysis-of-police-stopandfrisk-decisions(d2cd5bf0-c0b2-4cf9-8ded-df1eab3f0cd9).html"> Causal inference for discrimination: An analysis of police stop-and-frisk decisions</a></h3>
 
   <p style="margin:0 0 5px;">With <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a> 
-  <p style="margin:0 0 5px; color: grey">(new version coming soon)</p>
+
 
 
 <h3 style="margin:20px 0 5px;">The absolute and relative facets of the economic gradient in educational attainment: mixed methods evidence from Rio de Janeiro</h3>
