--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@ This paper analyzes whether caste impedes access to formal agricultural credit i
 <hr>
 <h2 id="other_writing">Other writing</h2>
 
+<h3 style="margin:20px 0 5px;"><a href="https://www.timeshighereducation.com/opinion/gender-pay-equality-universities-must-let-social-scientists-see-data">For gender pay equality, universities must let social scientists see the data</a> </h3>
+
+<p style="margin:0 0 5px;"><a href="" >Times Higher Education, April 28 2022</a></p>
 
 
 <h3 style="margin:20px 0 5px;"><a href=""> A (small) step along the way to a UK-India trade deal</a></h3> 
