--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ if (!doNotTrack) {
   <img src="./icons/email.png" class="octicons">
   </a></p>
   
-<!-- </a> <a class="sidebar" href="https://twitter.com/paulclist" target="_blank">
+</a> <a class="sidebar" href="https://twitter.com/SunilMitraKumar" target="_blank">
   	<img src="./icons/twitter.png" class="octicons">
-</a><a class="sidebar" href="https://github.com/paulclist" target="_blank">
+<!-- </a><a class="sidebar" href="https://github.com/paulclist" target="_blank">
   	<img src="./icons/github.png" class="octicons">
 </a></p>-->
 
