--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ if (!doNotTrack) {
 </a>  
 <a class="sidebar" href="mailto:sunil.kumar@kcl.ac.uk" target="_blank">
   <img src="./icons/email.png" class="octicons">
-  </a></p>
+  </a>
   
-</a> <a class="sidebar" href="https://twitter.com/SunilMitraKumar" target="_blank">
-  	<img src="./icons/twitter.png" class="octicons">
+<a class="sidebar" href="https://twitter.com/SunilMitraKumar" target="_blank">
+  	<img src="./icons/twitter.png" class="octicons"></a> </p>
 <!-- </a><a class="sidebar" href="https://github.com/paulclist" target="_blank">
   	<img src="./icons/github.png" class="octicons">
 </a></p>-->
