--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ if (!doNotTrack) {
 <h2 id="publications">Publications</h2>
 
 
-<h3 style="margin:20px 0 5px;"><a href="" target="blank">Counterfactual thinking and causal mediation: An application to female labour force participation in India</a> </h3>
+<h3 style="margin:20px 0 5px;"><a href="https://link.springer.com/chapter/10.1007/978-3-031-15294-8_11" target="blank">Counterfactual thinking and causal mediation: An application to female labour force participation in India</a> </h3>
 
 <p style="margin:0 0 5px;">(with <a href="https://scholar.google.com/citations?user=wvyGxeYAAAAJ&hl=en" >Ying-Fang Kao</a>)</p>
 
@@ -104,8 +104,9 @@ if (!doNotTrack) {
 
 <h3 style="margin:20px 0 5px;"><a href="https://kclpure.kcl.ac.uk/portal/files/161141559/discrimination_in_credit.pdf" target="blank">Discrimination in Credit</a> </h3>
 
-<p style="margin:0 0 5px;">forthcoming in <em>Handbook on Economics of Discrimination and Affirmative Action</em> (Ed. <a href="https://twitter.com/AshwDeshpande">Ashwini Deshpande</a>), New Delhi: Springer.</p>
+<p style="margin:0 0 5px;">forthcoming in <em><a href="https://link.springer.com/referenceworkentry/10.1007/978-981-33-4016-9_14-1" target="blank">Handbook on Economics of Discrimination and Affirmative Action</a></em> (Ed. <a href="https://twitter.com/AshwDeshpande">Ashwini Deshpande</a>), New Delhi: Springer.</p>
 
+	
 
 <p style="margin:0 0 5px;"><a href="javascript:toggle(1)">Abstract<span id="pubabslink_1"> (click to expand)</span></a><span id="pubabs_1" style="display:none;">: This essay provides a thematic discussion of discrimination in credit. Through a selective review of the literature I illustrate that caste, gender and race are all persistent axes of discrimination in credit, and that discrimination has been shown to exist across diverse contexts. I examine the main conceptual tools used in this literature to shed light on the causal mechanisms that lead to discrimination, and in particular attempt to delineate the role of individuals, institutions and formal regulation. By briefly exploring the links between discrimination in credit and group-based inequality in other arenas of economy and society, I argue why the implications of the former extend far beyond credit alone, and are a powerful force in shaping inequality more generally including across generations. </span></p>
 
