--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@ if (!doNotTrack) {
 <p>I received my PhD in Economics from the University of East Anglia, MA in Economics from the Delhi School of Economics, and BA (Hons.) in Mathematics from St. Stephen’s College, Delhi University. Before embarking on my PhD I worked for the Social Initiatives Group of ICICI Bank, an erstwhile major funder of non-profit activities in India.</p>
 
 
+	<iframe src="./my_figure.html" height="315" width="560" allowfullscreen="" frameborder="0"> </iframe>
+	
 <hr>
 <h2 id="publications">Publications</h2>
 
