--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ if (!doNotTrack) {
 <section>
     <h2 id="bio">Bio</h2>
 
-<p> I'm an economist at the <a href="https://www.kcl.ac.uk/kii/" target="_blank">King's India Institute</a> and <a href="https://www.kcl.ac.uk/did/" target="_blank">Department of International Development</a> at <a href="https://www.kcl.ac.uk" target="_blank">King's College London</a>. I work on questions of causal inference in development using observational data, particularly in the context of discrimination. </p>
+<p> I'm an economist at the <a href="https://www.kcl.ac.uk/kii/" target="_blank">King's India Institute</a> and <a href="https://www.kcl.ac.uk/did/" target="_blank">Department of International Development</a> at <a href="https://www.kcl.ac.uk" target="_blank">King's College London</a>, and I work on questions of causal inference in development using observational data, particularly in the context of discrimination and inequality. </p>
 
 <p>I received my PhD in Economics from the University of East Anglia, MA in Economics from the Delhi School of Economics, and BA (Hons.) in Mathematics from St. Stephen’s College, Delhi University. Before embarking on my PhD I worked for the Social Initiatives Group of ICICI Bank, an erstwhile major funder of non-profit activities in India.</p>
 
@@ -90,6 +90,21 @@ if (!doNotTrack) {
 <h2 id="publications">Publications</h2>
 
 
+<h3 style="margin:20px 0 5px;"><a href="" target="blank">Relative Deprivation and Hey and Lambert’s Motivation: Mixed Methods Evidence from Rio de Janeiro</a> </h3>
+
+
+<p style="margin:0 0 5px;">(with <a href="https://people.uea.ac.uk/lucio_esposito" 
+                                  >Lucio Esposito</a>, <a href="https://www.york.ac.uk/igdc/people/adrian-villasenor-lopez/" 
+                                  >Adrián Villaseñor</a> &amp; <a> Roney Fraga</a> </a>)</p>
+
+
+<p style="margin:0 0 5px;"><em>Journal of Income Distribution</em> (forthcoming)</p>
+
+<p style="margin:0 0 5px;"><a href="javascript:toggle(2)">Abstract<span id="pubabslink_2"> (click to expand)</span></a><span id="pubabs_2" style="display:none;">:  Hey and Lambert (1980) provided an interpretation of indices of relative deprivation in terms of interpersonal comparisons: the indices would quantify harmful feelings of frustration, inadequacy and inferiority arising from looking upward to better off others. A growing body of literature has followed this interpretation in quantitative studies which indeed typically reveal a negative association between relative deprivation and social outcomes such as happiness, health or education. However, evidence able to directly link a negative coefficient of relative deprivation to the mechanisms deflating and harmful for the self which underlie Hey and Lambert’s interpretation is lacking. We fill this gap by conducting a mixed method study. Using data from three waves of Brazilian high-stake secondary education exams for the state of Rio de Janeiro (N=245,555), we first analyse exam scores in econometric models where absolute income and relative deprivation are jointly employed as explanatory variables. Next, we interpret and expand upon our quantitative results using primary data collected via semi-structured interviews and focus group discussions with 30 local secondary school teachers. In conformity with Hey and Lambert’s interpretation, we find robust negative coefficients for relative deprivation, which teachers explain reporting the detrimental effects lower socioeconomic status and upward comparisons have on pupils’ self-esteem, motivation and aspirations. 
+</span></p>
+
+	
+	
 <h3 style="margin:20px 0 5px;"><a href="https://link.springer.com/chapter/10.1007/978-3-031-15294-8_11" target="blank">Counterfactual thinking and causal mediation: An application to female labour force participation in India</a> </h3>
 
 <p style="margin:0 0 5px;">(with <a href="https://scholar.google.com/citations?user=wvyGxeYAAAAJ&hl=en" >Ying-Fang Kao</a>)</p>
