--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@ if (!doNotTrack) {
 <section>
     <h2 id="bio">Bio</h2>
 
-<p> I'm an economist at the <a href="https://www.kcl.ac.uk/kii/" target="_blank">King's India Institute</a> and <a href="https://www.kcl.ac.uk/did/" target="_blank">Department of International Development</a> at <a href="https://www.kcl.ac.uk" target="_blank">King's College London</a>, and I work on questions of causal inference in development using observational data, particularly in the context of discrimination and inequality. </p>
+<p> I'm an economist at the <a href="https://www.kcl.ac.uk/kii/" target="_blank">King's India Institute</a> and <a href="https://www.kcl.ac.uk/did/" target="_blank">Department of International Development</a> at <a href="https://www.kcl.ac.uk" target="_blank">King's College London</a>, 
+	and I work on questions of causal inference in development using observational data, particularly in the context of discrimination and inequality. 
+	I currently serve as an Associate Editor for <a href="https://www.springer.com/journal/40888"> <em>Economia Politica</em></a>.
+</p>
 
 <p>I received my PhD in Economics from the University of East Anglia, MA in Economics from the Delhi School of Economics, and BA (Hons.) in Mathematics from St. Stephen’s College, Delhi University. Before embarking on my PhD I worked for the Social Initiatives Group of ICICI Bank, an erstwhile major funder of non-profit activities in India.</p>
 
@@ -95,7 +98,7 @@ if (!doNotTrack) {
 
 <p style="margin:0 0 5px;">(with <a href="https://people.uea.ac.uk/lucio_esposito" 
                                   >Lucio Esposito</a>, <a href="https://www.york.ac.uk/igdc/people/adrian-villasenor-lopez/" 
-                                  >Adrián Villaseñor</a> &amp; <a> Roney Fraga</a> </a>)</p>
+                                  >Adrián Villaseñor</a> &amp; <a> href="https://roneyfraga.com/" Roney Fraga</a> </a>)</p>
 
 
 <p style="margin:0 0 5px;"><em>Journal of Income Distribution</em> (forthcoming)</p>
