--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ if (!doNotTrack) {
 
 <p style="margin:0 0 5px;">(with <a href="https://people.uea.ac.uk/lucio_esposito" 
                                   >Lucio Esposito</a>, <a href="https://www.york.ac.uk/igdc/people/adrian-villasenor-lopez/" 
-                                  >Adrián Villaseñor</a> &amp; <a> href="https://roneyfraga.com/" Roney Fraga</a> </a>)</p>
+                                  >Adrián Villaseñor</a> &amp; <a href="https://roneyfraga.com/"> Roney Fraga </a>)</p>
 
 
 <p style="margin:0 0 5px;"><em>Journal of Income Distribution</em> (forthcoming)</p>
