--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ if (!doNotTrack) {
 <p style="margin:0 0 5px;">(with <a href="https://scholar.google.com/citations?user=wvyGxeYAAAAJ&hl=en" >Ying-Fang Kao</a>)</p>
 
 
-<p style="margin:0 0 5px;">forthcoming in <em>Artificial Intelligence, Learning and Computation in Economics and Finance. </em> (Ed. <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a>), New York: Springer.</p>
+<p style="margin:0 0 5px;"> in <em>Artificial Intelligence, Learning and Computation in Economics and Finance. </em> (Ed. <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a>), 2023, New York: Springer.</p>
 
 
 <p style="margin:0 0 5px;"><a href="javascript:toggle(0)">Abstract<span id="pubabslink_0"> (click to expand)</span></a><span id="pubabs_0" style="display:none;">: The use of computers has revolutionised our ability to learn about ourselves and the world around us. Beyond the goal of performance or prediction, the extent to which machine actions and algorithms are explainable and intelligible to human beings - Explainable AI - are increasingly becoming important, especially so in socio-economic contexts, and where life and health outcomes are involved. While the Turing test aims to distinguish between machine and human, Judea Pearl’s ‘mini’ Turing test focuses on one crucial aspect of this distinction: the ability to reason causally and thereby answer causal queries based on counterfactuals. At the heart of counterfactual-based reasoning lies the role of causal expla- nation, or delineating the underlying causal mechanisms. In this chapter we make a small step towards demonstrating how causal models can be brought to observational data to answer useful counterfactual queries in contexts where complex social processes are at play. We estimate the causal effects of education on female labour-force participation in India in a causal mediation framework. We consider the role of positive assortative marital-matching in terms of education which leads to husbands’ levels of education mediating the effect of women’s education on their subsequent labour force participation, and we use a g-formula based approach to estimate the total causal and natural direct effect of education.
@@ -122,7 +122,7 @@ if (!doNotTrack) {
 
 <h3 style="margin:20px 0 5px;"><a href="https://kclpure.kcl.ac.uk/portal/files/161141559/discrimination_in_credit.pdf" target="blank">Discrimination in Credit</a> </h3>
 
-<p style="margin:0 0 5px;">forthcoming in <em><a href="https://link.springer.com/referenceworkentry/10.1007/978-981-33-4016-9_14-1" target="blank">Handbook on Economics of Discrimination and Affirmative Action</a></em> (Ed. <a href="https://twitter.com/AshwDeshpande">Ashwini Deshpande</a>), New Delhi: Springer.</p>
+<p style="margin:0 0 5px;">in <em><a href="https://link.springer.com/referenceworkentry/10.1007/978-981-33-4016-9_14-1" target="blank">Handbook on Economics of Discrimination and Affirmative Action</a></em> (Ed. <a href="https://twitter.com/AshwDeshpande">Ashwini Deshpande</a>), 2022, New Delhi: Springer.</p>
 
 	
 
