--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@ if (!doNotTrack) {
 <h2 id="publications">Publications</h2>
 
 
+
+<h3 style="margin:20px 0 5px;"><a href="https://onlinelibrary.wiley.com/doi/10.1111/rode.13029" target="blank">Poor economics and its missing mechanisms: The case for causal mediation</a> </h3>
+
+
+<p style="margin:0 0 5px;">(with <a href="https://www.gold.ac.uk/institute-management-studies/staff/venkatachalam-ragupathy/" >Ragupathy Venkatachalam</a>)</p>
+
+
+<p style="margin:0 0 5px;"><em>Review of Development Economics</em>, 2023</p>
+
+<p style="margin:0 0 5px;"><a href="javascript:toggle(2)">Abstract<span id="pubabslink_2"> (click to expand)</span></a><span id="pubabs_2" style="display:none;">: A key aim of studying development is to understand the factors that shape socioeconomic progress and explain inequalities. In empirical work, the predominant focus has been on posing these questions in the language of causal inference: how one or more variables effect an outcome of interest, with the estimation of Average Treatment Effects (ATE) becoming prioritised as the key objective. The ‘credibility revolution’ and the emphasis on randomised controlled trials in research on development has cemented this dominance, because randomisation is well-suited to estimating the ATE. This paper argues that this dual dominance—ATE as main question of interest, and experiment as preferred method—is narrow and restrictive. We propose causal mediation frameworks as an alternative, which are routinely used in disciplines including epidemiology, psychology, sociology and political science where causal mechanisms are an equally important focus. We introduce key concepts and definitions of path-specific effects, and discuss identification and estimation approaches. We illustrate applications for development and demonstrate how causal mediation brings the focus back to contextual knowledge, combining this with empirical rigour.
+</span></p>
+
+
+
+
+
+
+	
 <h3 style="margin:20px 0 5px;"><a href="" target="blank">Relative Deprivation and Hey and Lambert’s Motivation: Mixed Methods Evidence from Rio de Janeiro</a> </h3>
 
 
