--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ if (!doNotTrack) {
 
 <p> I'm an economist at the <a href="https://www.kcl.ac.uk/kii/" target="_blank">King's India Institute</a> and <a href="https://www.kcl.ac.uk/did/" target="_blank">Department of International Development</a> at <a href="https://www.kcl.ac.uk" target="_blank">King's College London</a>, 
 	and I work on questions of causal inference in development using observational data, particularly in the context of discrimination and inequality. 
-	I currently serve as an Associate Editor for <a href="https://www.springer.com/journal/40888"> <em>Economia Politica</em></a>.
+	I am an Associate Editor for the <a href="https://www.tandfonline.com/journals/fjds20"> <em>Journal of Development Studies</em></a> and <a href="https://www.springer.com/journal/40888"> <em>Economia Politica</em></a>, and am currently leading an ESRC-funded <a href="https://ukitp.org"> <em>project on the role of small firms in UK-India trade</em></a>.
 </p>
 
 <p>I received my PhD in Economics from the University of East Anglia, MA in Economics from the Delhi School of Economics, and BA (Hons.) in Mathematics from St. Stephen’s College, Delhi University. Before embarking on my PhD I worked for the Social Initiatives Group of ICICI Bank, an erstwhile major funder of non-profit activities in India.</p>
